.net core3支持动态卸载dll

--- a/WJ.ModelToDoc.csproj
+++ b/WJ.ModelToDoc.csproj
@@ -7,6 +7,10 @@
     <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>F:\维加\WJ.ModelToDoc\WJ.ModelToDoc.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="DotNetCore.NPOI" Version="1.2.2" />
     <PackageReference Include="DotNetZip" Version="1.13.4" />
@@ -20,6 +24,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
     <PackageReference Include="NPOI" Version="2.4.1" />
     <PackageReference Include="Spire.Office" Version="4.11.2" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
